generate random id on load

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <input class="form-control key-pair" value="_id">
                 </div>
                 <div class="col-9 py-2">
-                    <input class="form-control value-pair" value="lkqlkskdjf">
+                    <input class="form-control value-pair" value="">
                 </div>
             </div>
             <!-- name -->
