--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
           </ul>
         </div>
     </nav>
-
-    <div class="container-float">
+    <div class="container">
+        <button type="button" class="btn btn-primary" onclick="clearFormOptions()">Clear Form</button>
+    </div>
+    <div class="container">
         <div>{</div>
         <form action="" id="main-form">
             <button type="button" class="btn btn-primary" onclick="addKeyValuePair(event)">Add (Key : Value)</button>
@@ -222,7 +224,9 @@
         <div>}</div>
         <button type="button" class="btn btn-info" onclick="generateJson()">Generate</button>
     </div>
-    
+    <div class="container">
+            <textarea  id="generated-json" cols="100"></textarea>
+    </div>
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
