added default image

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <input class="form-control key-pair" value="img">
                 </div>
                 <div class="col-9 py-2">
-                    <input class="form-control value-pair">
+                    <input class="form-control value-pair" value="icons/svg/mystery-man.svg">
                 </div>
             </div>
         </form>
