removed move value form inputs

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                     <input class="form-control key-pair" value="name">
                                 </div>
                                 <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="move">
+                                    <input class="form-control value-pair" value="">
                                 </div>
                             </div>
                             <!-- description -->
@@ -111,7 +111,7 @@
                                     <input class="form-control key-pair" value="description">
                                 </div>
                                 <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="move">
+                                    <input class="form-control value-pair" value="">
                                 </div>
                             </div>
                             <!-- rollType -->
@@ -120,7 +120,7 @@
                                     <input class="form-control key-pair" value="rollType">
                                 </div>
                                 <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="move">
+                                    <input class="form-control value-pair" value="">
                                 </div>
                             </div>
                             <!-- rollMod -->
@@ -129,7 +129,7 @@
                                     <input class="form-control key-pair" value="rollMod">
                                 </div>
                                 <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="move">
+                                    <input class="form-control value-pair" value="">
                                 </div>
                             </div>
                             <!-- requiresLevel -->
@@ -138,7 +138,7 @@
                                     <input class="form-control key-pair" value="requiresLevel">
                                 </div>
                                 <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="move">
+                                    <input class="form-control value-pair" value="">
                                 </div>
                             </div>
                             <!-- requiresMove -->
@@ -147,7 +147,7 @@
                                     <input class="form-control key-pair" value="requiresMove">
                                 </div>
                                 <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="move">
+                                    <input class="form-control value-pair" value="">
                                 </div>
                             </div>
                             <!-- class -->
@@ -156,7 +156,7 @@
                                     <input class="form-control key-pair" value="class">
                                 </div>
                                 <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="move">
+                                    <input class="form-control value-pair" value="">
                                 </div>
                             </div>
                             <!-- moveType -->
@@ -165,7 +165,7 @@
                                     <input class="form-control key-pair" value="moveType">
                                 </div>
                                 <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="move">
+                                    <input class="form-control value-pair" value="">
                                 </div>
                             </div>
                             <div class="form-row"><div class="col py-2"><input class="form-control key-pair" value="moveResults"></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button><div class="form-row"><div class="col py-2"><input class="form-control key-pair" value="failure"></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
