key deleting added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
             <button type="button" class="btn btn-primary" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
             <div class="form-row">
                 <div class="col py-2">
-                    <input class="form-control key-pair" value="_id">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="_id">
+                    </div>
                 </div>
                 <div class="col-9 py-2">
                     <input class="form-control value-pair" value="">
@@ -49,7 +52,10 @@
             <!-- name -->
             <div class="form-row">
                 <div class="col py-2">
-                    <input class="form-control key-pair" value="name">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="name">
+                    </div>
                 </div>
                 <div class="col-9 py-2">
                     <input class="form-control value-pair" value="">
@@ -57,7 +63,10 @@
             </div>
             <div class="form-row">
                 <div class="col py-2">
-                    <input class="form-control key-pair" value="permission">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="permission">
+                    </div>
                 </div>
                 <!-- permission -->
                 <div class="col-9">
@@ -68,7 +77,10 @@
                         <button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
                         <div class="form-row">
                             <div class="col py-2">
-                                <input class="form-control key-pair" value="default">
+                                <div class="d-flex flex-row">
+                                    <button class="btn btn-outline-danger delete-button">x</button>
+                                    <input class="form-control key-pair" value="default">
+                                </div>
                             </div>
                             <div class="col-9 py-2">
                                 <input class="form-control value-pair" value="0"></div>
@@ -80,7 +92,10 @@
             <!-- type -->
             <div class="form-row">
                 <div class="col py-2">
-                    <input class="form-control key-pair" value="type">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="type">
+                    </div>
                 </div>
                 <div class="col-9 py-2">
                     <input class="form-control value-pair" value="move">
@@ -88,7 +103,10 @@
             </div>
             <div class="form-row">
                 <div class="col py-2">
-                    <input class="form-control key-pair" value="data">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="data">
+                    </div>
                 </div>
                 <div class="col-9">
                     <div class="open-bracket">{</div>
@@ -99,7 +117,10 @@
                             <!-- name -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="name">
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-outline-danger delete-button">x</button>
+                                        <input class="form-control key-pair" value="name">
+                                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair" value="">
@@ -108,7 +129,10 @@
                             <!-- description -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="description">
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-outline-danger delete-button">x</button>
+                                        <input class="form-control key-pair" value="description">
+                                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair" value="">
@@ -117,7 +141,10 @@
                             <!-- rollType -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="rollType">
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-outline-danger delete-button">x</button>
+                                        <input class="form-control key-pair" value="rollType">
+                                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair" value="">
@@ -126,7 +153,10 @@
                             <!-- rollMod -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="rollMod">
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-outline-danger delete-button">x</button>
+                                        <input class="form-control key-pair" value="rollMod">
+                                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair" value="">
@@ -135,7 +165,10 @@
                             <!-- requiresLevel -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="requiresLevel">
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-outline-danger delete-button">x</button>
+                                        <input class="form-control key-pair" value="requiresLevel">
+                                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair" value="">
@@ -144,7 +177,10 @@
                             <!-- requiresMove -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="requiresMove">
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-outline-danger delete-button">x</button>
+                                        <input class="form-control key-pair" value="requiresMove">
+                                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair" value="">
@@ -153,7 +189,10 @@
                             <!-- class -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="class">
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-outline-danger delete-button">x</button>
+                                        <input class="form-control key-pair" value="class">
+                                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair" value="">
@@ -162,35 +201,59 @@
                             <!-- moveType -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="moveType">
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-outline-danger delete-button">x</button>
+                                        <input class="form-control key-pair" value="moveType">
+                                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair" value="">
                                 </div>
                             </div>
-                            <div class="form-row"><div class="col py-2"><input class="form-control key-pair" value="moveResults"></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button><div class="form-row"><div class="col py-2"><input class="form-control key-pair" value="failure"></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
+                            <div class="form-row"><div class="col py-2"><div class="d-flex flex-row">
+                                <button class="btn btn-outline-danger delete-button">x</button>
+                                <input class="form-control key-pair" value="moveResults">
+                            </div></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button><div class="form-row"><div class="col py-2"><div class="d-flex flex-row">
+                                <button class="btn btn-outline-danger delete-button">x</button>
+                                <input class="form-control key-pair" value="failure">
+                            </div></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
                             <!-- value -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="value">
+                                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="value">
+                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair">
                                 </div>
-                            </div></div><div class="close-bracket">}</div></div></div><div class="form-row"><div class="col py-2"><input class="form-control key-pair" value="partial"></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
+                            </div></div><div class="close-bracket">}</div></div></div><div class="form-row"><div class="col py-2"><div class="d-flex flex-row">
+                                <button class="btn btn-outline-danger delete-button">x</button>
+                                <input class="form-control key-pair" value="partial">
+                            </div></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
                             <!--  -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="value">
+                                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="value">
+                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair">
                                 </div>
-                            </div></div><div class="close-bracket">}</div></div></div><div class="form-row"><div class="col py-2"><input class="form-control key-pair" value="success"></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
+                            </div></div><div class="close-bracket">}</div></div></div><div class="form-row"><div class="col py-2"><div class="d-flex flex-row">
+                                <button class="btn btn-outline-danger delete-button">x</button>
+                                <input class="form-control key-pair" value="success">
+                            </div></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
                             <!--  -->
                             <div class="form-row">
                                 <div class="col py-2">
-                                    <input class="form-control key-pair" value="value">
+                                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="value">
+                    </div>
                                 </div>
                                 <div class="col-9 py-2">
                                     <input class="form-control value-pair">
@@ -199,7 +262,10 @@
             </div>
             <div class="form-row">
                 <div class="col py-2">
-                    <input class="form-control key-pair" value="flags">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="flags">
+                    </div>
                 </div>
                 <div class="col-9">
                     <div class="open-bracket">{</div>
@@ -214,7 +280,10 @@
             <!--  -->
             <div class="form-row">
                 <div class="col py-2">
-                    <input class="form-control key-pair" value="img">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-outline-danger delete-button">x</button>
+                        <input class="form-control key-pair" value="img">
+                    </div>
                 </div>
                 <div class="col-9 py-2">
                     <input class="form-control value-pair" value='icons/svg/mystery-man.svg'>
