--- a/index.html
+++ b/index.html
@@ -35,260 +35,7 @@
     <div class="container">
         <div>{</div>
         <form action="" id="main-form">
-            <button type="button" class="btn btn-primary" onclick="addKeyValuePair(event)">Add (Key : Value)</button>
-            <button type="button" class="btn btn-primary" onclick="addKeyArrayPair(event)">Add (Key : Array)</button>
-            <button type="button" class="btn btn-primary" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
-            <div class="form-row">
-                <div class="col py-2">
-                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="_id">
-                    </div>
-                </div>
-                <div class="col-9 py-2">
-                    <input class="form-control value-pair" value="">
-                </div>
-            </div>
-            <!-- name -->
-            <div class="form-row">
-                <div class="col py-2">
-                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="name">
-                    </div>
-                </div>
-                <div class="col-9 py-2">
-                    <input class="form-control value-pair" value="">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="col py-2">
-                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="permission">
-                    </div>
-                </div>
-                <!-- permission -->
-                <div class="col-9">
-                    <div class="open-bracket">{</div>
-                    <div class="py-2">
-                        <button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button>
-                        <button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button>
-                        <button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
-                        <div class="form-row">
-                            <div class="col py-2">
-                                <div class="d-flex flex-row">
-                                    <button class="btn btn-outline-danger delete-button">x</button>
-                                    <input class="form-control key-pair" value="default">
-                                </div>
-                            </div>
-                            <div class="col-9 py-2">
-                                <input class="form-control value-pair" value="0"></div>
-                            </div>
-                        </div>
-                    <div class="close-bracket">}</div>
-                </div>
-            </div>
-            <!-- type -->
-            <div class="form-row">
-                <div class="col py-2">
-                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="type">
-                    </div>
-                </div>
-                <div class="col-9 py-2">
-                    <input class="form-control value-pair" value="move">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="col py-2">
-                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="data">
-                    </div>
-                </div>
-                <div class="col-9">
-                    <div class="open-bracket">{</div>
-                        <div class="py-2">
-                            <button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button>
-                            <button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button>
-                            <button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
-                            <!-- name -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-outline-danger delete-button">x</button>
-                                        <input class="form-control key-pair" value="name">
-                                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="">
-                                </div>
-                            </div>
-                            <!-- description -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-outline-danger delete-button">x</button>
-                                        <input class="form-control key-pair" value="description">
-                                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="">
-                                </div>
-                            </div>
-                            <!-- rollType -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-outline-danger delete-button">x</button>
-                                        <input class="form-control key-pair" value="rollType">
-                                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="">
-                                </div>
-                            </div>
-                            <!-- rollMod -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-outline-danger delete-button">x</button>
-                                        <input class="form-control key-pair" value="rollMod">
-                                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="">
-                                </div>
-                            </div>
-                            <!-- requiresLevel -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-outline-danger delete-button">x</button>
-                                        <input class="form-control key-pair" value="requiresLevel">
-                                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="">
-                                </div>
-                            </div>
-                            <!-- requiresMove -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-outline-danger delete-button">x</button>
-                                        <input class="form-control key-pair" value="requiresMove">
-                                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="">
-                                </div>
-                            </div>
-                            <!-- class -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-outline-danger delete-button">x</button>
-                                        <input class="form-control key-pair" value="class">
-                                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="">
-                                </div>
-                            </div>
-                            <!-- moveType -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-outline-danger delete-button">x</button>
-                                        <input class="form-control key-pair" value="moveType">
-                                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair" value="">
-                                </div>
-                            </div>
-                            <div class="form-row"><div class="col py-2"><div class="d-flex flex-row">
-                                <button class="btn btn-outline-danger delete-button">x</button>
-                                <input class="form-control key-pair" value="moveResults">
-                            </div></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button><div class="form-row"><div class="col py-2"><div class="d-flex flex-row">
-                                <button class="btn btn-outline-danger delete-button">x</button>
-                                <input class="form-control key-pair" value="failure">
-                            </div></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
-                            <!-- value -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="value">
-                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair">
-                                </div>
-                            </div></div><div class="close-bracket">}</div></div></div><div class="form-row"><div class="col py-2"><div class="d-flex flex-row">
-                                <button class="btn btn-outline-danger delete-button">x</button>
-                                <input class="form-control key-pair" value="partial">
-                            </div></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
-                            <!--  -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="value">
-                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair">
-                                </div>
-                            </div></div><div class="close-bracket">}</div></div></div><div class="form-row"><div class="col py-2"><div class="d-flex flex-row">
-                                <button class="btn btn-outline-danger delete-button">x</button>
-                                <input class="form-control key-pair" value="success">
-                            </div></div><div class="col-9"><div class="open-bracket">{</div><div class="py-2"><button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button><button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button><button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
-                            <!--  -->
-                            <div class="form-row">
-                                <div class="col py-2">
-                                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="value">
-                    </div>
-                                </div>
-                                <div class="col-9 py-2">
-                                    <input class="form-control value-pair">
-                                </div>
-                            </div></div><div class="close-bracket">}</div></div></div></div><div class="close-bracket">}</div></div></div></div><div class="close-bracket">}</div></div>
-            </div>
-            <div class="form-row">
-                <div class="col py-2">
-                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="flags">
-                    </div>
-                </div>
-                <div class="col-9">
-                    <div class="open-bracket">{</div>
-                        <div class="py-2">
-                            <button class="btn btn-primary" type="button" onclick="addKeyValuePair(event)">Add (Key : Value)</button>
-                            <button class="btn btn-primary" type="button" onclick="addKeyArrayPair(event)">Add (Key : Array)</button>
-                            <button class="btn btn-primary" type="button" onclick="addKeyObjectPair(event)">Add (Key : Object)</button>
-                        </div>
-                        <div class="close-bracket">}</div>
-                </div>
-            </div>
-            <!--  -->
-            <div class="form-row">
-                <div class="col py-2">
-                    <div class="d-flex flex-row">
-                        <button class="btn btn-outline-danger delete-button">x</button>
-                        <input class="form-control key-pair" value="img">
-                    </div>
-                </div>
-                <div class="col-9 py-2">
-                    <input class="form-control value-pair" value='icons/svg/mystery-man.svg'>
-                </div>
-            </div>
+            
         </form>
         <div>}</div>
         <button type="button" class="btn btn-info" onclick="generateJson()">Generate</button>
@@ -300,6 +47,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="htmlVariables.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
